plugins {
    id 'java'
    id 'maven-publish'
}

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

group 'me.nort3x'
version '0.0.0'

repositories {
    mavenCentral()
    maven { url 'https://mvnrepository.com/artifact/org.apache.commons/commons-lang3' }
    maven { url 'https://mvnrepository.com/artifact/org.slf4j/slf4j-jdk14' }
    maven { url 'https://jitpack.io' }
}


configurations {
    jarShaded
}

dependencies {
    implementation 'org.slf4j:slf4j-api:1.7.30'
    implementation 'org.slf4j:slf4j-simple:1.7.30'
//    implementation 'com.github.nort3x:atomicdi:0.0.0-alpha.0'
    jarShaded implementation('net.oneandone.reflections8:reflections8:0.11.5')

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.3.1'

}
test {
    useJUnitPlatform()
}


jar {
    from {
        configurations.jarShaded.collect { it.isDirectory() ? it : zipTree(it) }
    }
}